* Fix spacing issue caused by HTML minify

--- a/mockup/css/style.css
+++ b/mockup/css/style.css
@@ -569,9 +569,8 @@ a.nav_item_sidebar--sub {
   width: 40px;
 }
 #site_logo_text {
-  display: inline-block;
   vertical-align: top;
-  padding: 8px 2px;
+  padding: 8px 2px 8px 5px;
   font-weight: 800;
   font-size: 20px;
   color: rgb(53,55,54);
